--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <script src='https://cdn.tailwindcss.com'></script>
-  <script src='./assets//main.js'></script>
+  <script defer src='./assets//main.js'></script>
 </head>
 
 <body>
@@ -70,7 +70,7 @@
         <span aria-hidden='true' class='absolute inset-0'></span>
         Descubre los videos de los últimos descubrimientos de la galaxia.
       </h3>
-      <div class='mt-6 grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8' id='content'>
+      <div class='mt-6 grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-3 xl:gap-x-8' id='content'>
         <!-- content -->
 
 
@@ -85,8 +85,8 @@
 
         <div class='grid grid-cols-1 md:grid-cols-2'>  
 
-            <h2 class='text-center text-4xl tracking-tight font-extrabold sm:text-5xl md:text-6xl  items-center '>
-                <span class='block text-white'>Contactáctanos</span>
+            <h2 class='text-center text-4xl tracking-tight font-extrabold sm:text-5xl md:text-6xl  items-center select-none'>
+                <span class='block text-white'>Contáctanos.</span>
                 <span class='block text-violet-600'>Descubre al universo.</span>
             </h2>
             <div class='mt-8 flex lg:mt-0 justify-center items-center'>
